app/styles/02-components/02-layouts/_app.styl
.app
  null
  
.app-controls
  @extend .nest-5
  position fixed
  top 1em
  right 1em
  z-index 10
.app-control
  @extend .pad-6
  border-radius 100px
  background rgba(white, 0.875)
  display inline-block
  margin 0
  color #999
  width 2.75em
  height 2.75em
  vertical-align middle
  text-align center
  text-decoration none
  &.sub-twitter
    color #56AEEC
    
.app-sidebar
  position relative
  width 5em
  z-index 1
  
  .scroll
    padding-right 10em
    margin-right -10em
    width auto
    overflow hidden

  .scroll-pane
    right -15em
    padding-right 25em
  
.app-map
  position relative
  overflow hidden

